fix layout issue

--- a/src/modules/LogginedUser/loggined-user.module.css
+++ b/src/modules/LogginedUser/loggined-user.module.css
@@ -2,9 +2,10 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    margin: 1rem;
+    margin: 2rem;
 }
 
 .greetings {
-    margin: 1rem;
+    /* margin: 1rem; */
+    font-size: 25px;
 }
