--- a/src/modules/PublicForm/public-form.module.css
+++ b/src/modules/PublicForm/public-form.module.css
@@ -4,7 +4,7 @@
     background: #8aaae5;
     color: #161b21;
     width: 500px;
-    margin: 2rem auto;
+    margin: 3rem auto;
 }
 
 .item {
