--- a/src/modules/UpdateForm/update-form.module.css
+++ b/src/modules/UpdateForm/update-form.module.css
@@ -13,6 +13,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* margin: 1rem; */
 }
 
 .input {
@@ -34,5 +35,5 @@
 }
 
 .wrapper_image {
-    margin-top: 2rem;
+    margin-top: 3rem;
 }
